--- a/xApps/active-xapp/init/config-file.json
+++ b/xApps/active-xapp/init/config-file.json
@@ -1,12 +1,12 @@
 {
-    "name": "xapp-test",
+    "name": "activexapp",
     "version": "1.0.0",
     "containers": [
         {
-            "name": "xapp-test",
+            "name": "activexapp",
             "image": {
                 "registry": "127.0.0.1:5001",
-                "name": "xapp-test",
+                "name": "activexapp",
                 "tag": "1.0.0"
             }
         }
@@ -15,28 +15,30 @@
         "ports": [
             {
                 "name": "http",
-                "container": "xapp-test",
+                "container": "activexapp",
                 "port": 8080,
                 "description": "http service"
             },
             {
                 "name": "rmrroute",
-                "container": "xapp-test",
+                "container": "activexapp",
                 "port": 4561,
-                "description": "rmr route port for xapp-test xapp"
+                "description": "rmr route port for activexapp xapp"
             },
             {
                 "name": "rmrdata",
-                "container": "xapp-test",
+                "container": "activexapp",
                 "port": 4560,
                 "rxMessages": ["RIC_SUB_RESP", "RIC_SUB_FAILURE", "RIC_SUB_DEL_RESP", "RIC_INDICATION"],
                 "txMessages": ["RIC_SUB_REQ", "RIC_SUB_DEL_REQ", "RIC_SGNB_ADDITION_REQ", "RIC_SGNB_ADDITION_ACK"],
                 "mtypes" : [
                         {"name":"TESTNAME1","id":55555},
-                        {"name":"TESTNAME2","id":55556}
+                        {"name":"TESTNAME2","id":55556},
+                        {"name":"SEND_ACT_XAPP_REQ","id":30000},
+                        {"name":"RCV_REACT_XAPP_ACK","id":30001}
                 ],
                 "policies": [1],
-                "description": "rmr data port for xapp-test"
+                "description": "rmr data port for activexapp"
             }
         ]
     },
